--- a/functions/package.json
+++ b/functions/package.json
@@ -22,7 +22,7 @@
     "@genkit-ai/googleai": "^1.13.0",
     "genkit": "^1.8.0",
     "zod": "^3.24.2",
-    "langchain": "^0.3.29",
+    "@langchain/community": "^0.2.18",
     "cheerio": "^1.0.0-rc.12"
   },
   "devDependencies": {
