--- a/functions/package.json
+++ b/functions/package.json
@@ -15,15 +15,16 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@genkit-ai/googleai": "^1.13.0",
     "@google-cloud/storage": "^7.16.0",
+    "@langchain/community": "0.0.52",
+    "@opentelemetry/exporter-jaeger": "^1.25.1",
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "firebase-admin": "^12.7.0",
     "firebase-functions": "^6.3.2",
-    "@genkit-ai/googleai": "^1.13.0",
     "genkit": "^1.8.0",
-    "zod": "^3.24.2",
-    "@langchain/community": "0.0.52",
-    "cheerio": "^1.0.0-rc.12"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
