--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@genkit-ai/googleai": "^1.13.0",
     "@hookform/resolvers": "^4.1.3",
-    "@langchain/community": "0.0.52",
+    "@langchain/community": "^0.2.19",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-scroll-area": "^1.2.9",
