--- a/firebase.json
+++ b/firebase.json
@@ -1,3 +1,4 @@
+
 {
   "firestore": {
     "database": "(default)",
@@ -29,8 +30,7 @@
       "start": "npm run dev-no-turbopack"
     },
     "functions": {
-      "port": 9050,
-      "start": "npm run dev-no-turbopack"
+      "port": 9050
     },
     "firestore": {
       "port": 9010    },
