--- a/functions/package.json
+++ b/functions/package.json
@@ -11,12 +11,13 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "22"
+    "node": "20"
   },
   "main": "./src/index.ts",
   "dependencies": {
     "@genkit-ai/googleai": "^1.13.0",
     "@google-cloud/storage": "^7.16.0",
+    "@langchain/core": "^0.3.62",
     "@tailwindcss/postcss": "^4.1.11",
     "autoprefixer": "^10.4.21",
     "cors": "^2.8.5",
@@ -25,16 +26,17 @@
     "genkit": "^1.13.0",
     "glob": "^10.4.5",
     "tailwindcss": "^4.1.11",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "cheerio": "^1.1.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@typescript-eslint/eslint-plugin": "^8.35.0",
     "@typescript-eslint/parser": "^8.35.0",
+    "@types/node-fetch": "^2.6.12",
     "eslint": "^9.29.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.32.0",
-    "firebase-functions-test": "^3.4.1",
     "typescript": "^5.5.4"
   },
   "private": true
