--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -7,7 +7,7 @@
     "lib": ["es2022"],
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["src/*"]
     },
     "outDir": "lib",
     "sourceMap": true,
@@ -19,5 +19,5 @@
   },
   "compileOnSave": true,
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules","lib"]
 }
