--- a/package.json
+++ b/package.json
@@ -16,27 +16,36 @@
     "@genkit-ai/firebase": "^1.14.0",
     "@genkit-ai/googleai": "^1.13.0",
     "@hookform/resolvers": "^5.1.1",
-    "@langchain/community": "^0.3.47",
+    "@langchain/core": "^0.3.62",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.60.1",
     "@opentelemetry/exporter-jaeger": "^2.0.1",
     "@opentelemetry/exporter-trace-otlp-http": "^0.202.0",
+    "@opentelemetry/resources": "^2.0.1",
     "@opentelemetry/sdk-node": "^0.202.0",
     "@opentelemetry/sdk-trace-node": "^2.0.1",
     "@opentelemetry/winston-transport": "^0.13.0",
     "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-menubar": "^1.1.15",
+    "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-radio-group": "^1.3.7",
     "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
-    "cheerio": "^1.0.0-rc.12",
+    "cheerio": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -46,10 +55,10 @@
     "firebase-functions": "^6.3.2",
     "framer-motion": "^12.18.1",
     "genkit": "^1.13.0",
-    "lru-cache": "^11.1.0",
     "lucide-react": "^0.523.0",
     "next": "^15.3.4",
     "react": "^18.3.1",
+    "react-day-picker": "^9.7.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "recharts": "^3.0.2",
@@ -69,10 +78,8 @@
     "@typescript-eslint/eslint-plugin": "^8.35.0",
     "@typescript-eslint/parser": "^8.35.0",
     "autoprefixer": "^10.4.21",
-    "babel-loader": "^10.0.0",
-    "eslint": "^8.57.1",
     "eslint-config-next": "^15.3.3",
-    "genkit-cli": "^1.8.0",
+    "firebase-tools": "^13.35.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "tailwindcss": "^3.4.17",
@@ -83,7 +90,7 @@
     "webpack-cli": "^6.0.1"
   },
   "engines": {
-    "node": ">=18.17.0",
+    "node": "20",
     "npm": ">=9.0.0"
   }
 }
