--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
     "rootDir": "src",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
-    "target": "ES2022",
-    "lib": ["es2022"],
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "target": "ES2020",
+    "lib": ["es2020"],
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
