--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -5,7 +5,7 @@ name: Deploy to Firebase Hosting on merge
 on:
   push:
     branches:
-      - Pre-CI/CD
+      - master
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
