--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -20,3 +20,5 @@ jobs:
           projectId: rankpilot-h3jpc
         env:
           FIREBASE_CLI_EXPERIMENTS: webframeworks
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+          GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
