--- a/functions/package.json
+++ b/functions/package.json
@@ -13,7 +13,7 @@
   "engines": {
     "node": "20"
   },
-  "main": "./src/index.ts",
+  "main": "./lib/index.js",
   "dependencies": {
     "@genkit-ai/googleai": "^1.13.0",
     "@google-cloud/storage": "^7.16.0",
