--- a/package.json
+++ b/package.json
@@ -57,13 +57,15 @@
     "genkit": "^1.13.0",
     "lucide-react": "^0.523.0",
     "next": "^15.3.4",
+    "openai": "^5.8.3",
     "react": "^18.3.1",
     "react-day-picker": "^9.7.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "recharts": "^3.0.2",
     "tailwind-merge": "^3.0.1",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zod-to-json-schema": "^3.24.6"
   },
   "devDependencies": {
     "@babel/core": "^7.27.7",
