--- a/functions/package.json
+++ b/functions/package.json
@@ -20,20 +20,22 @@
     "@langchain/core": "^0.3.62",
     "@tailwindcss/postcss": "^4.1.11",
     "autoprefixer": "^10.4.21",
+    "cheerio": "^1.1.0",
     "cors": "^2.8.5",
     "firebase-admin": "^12.7.0",
     "firebase-functions": "^6.3.2",
     "genkit": "^1.13.0",
     "glob": "^10.4.5",
+    "openai": "^5.8.3",
     "tailwindcss": "^4.1.11",
     "zod": "^3.24.2",
-    "cheerio": "^1.1.0"
+    "zod-to-json-schema": "^3.24.6"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
+    "@types/node-fetch": "^2.6.12",
     "@typescript-eslint/eslint-plugin": "^8.35.0",
     "@typescript-eslint/parser": "^8.35.0",
-    "@types/node-fetch": "^2.6.12",
     "eslint": "^9.29.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.32.0",
