feat: Add authentication tests and configuration
- Created test configuration file for user credentials.
- Implemented authentication feature tests including login, registration, and error handling.
- Developed end-to-end tests for public pages and homepage functionality.
- Enhanced test setup with authentication state management for standard and admin users.
- Added utility functions for login and logout processes.
- Established accessibility checks for various pages and elements.
- Included performance metrics and network request validation in homepage tests.

--- a/.gitignore
+++ b/.gitignore
@@ -45,7 +45,7 @@ pnpm-debug.log*
 *.sublime-workspace
 *.sublime-project
 
-# Environment variables
+# Environment files
 .env
 .env.*
 !.env.example
