--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "rotate-credentials": "ts-node scripts/rotate-credentials.ts",
+    "verify-env": "ts-node -P scripts/tsconfig.json scripts/verify-env.ts",
+    "security-check": "npm audit && npm run verify-env"
   },
   "dependencies": {
     "@genkit-ai/firebase": "^1.14.0",
@@ -57,22 +60,21 @@
     "genkit": "^1.13.0",
     "lucide-react": "^0.523.0",
     "next": "^15.3.4",
-    "openai": "^5.8.3",
     "react": "^18.3.1",
     "react-day-picker": "^9.7.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "recharts": "^3.0.2",
     "tailwind-merge": "^3.0.1",
-    "zod": "^3.24.2",
     "zod-to-json-schema": "^3.24.6"
   },
   "devDependencies": {
     "@babel/core": "^7.27.7",
     "@babel/preset-env": "^7.27.2",
     "@babel/preset-react": "^7.27.1",
+    "@playwright/test": "^1.54.0",
     "@types/firebase": "^2.4.32",
-    "@types/node": "^20.16.10",
+    "@types/node": "^20.19.6",
     "@types/node-fetch": "^2.6.12",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
@@ -82,14 +84,18 @@
     "autoprefixer": "^10.4.21",
     "eslint-config-next": "^15.3.3",
     "firebase-tools": "^13.35.0",
+    "node-fetch": "^2.7.0",
+    "openai": "^5.8.4",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.2",
     "tsx": "^4.7.0",
     "typescript": "^5.8.3",
     "webpack": "^5.99.9",
-    "webpack-cli": "^6.0.1"
+    "webpack-cli": "^6.0.1",
+    "zod": "^3.25.76"
   },
   "engines": {
     "node": "20",
