--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@genkit-ai/firebase": "^1.14.0",
     "@genkit-ai/googleai": "^1.13.0",
+    "@google-cloud/error-reporting": "^3.0.5",
     "@hookform/resolvers": "^5.1.1",
     "@langchain/core": "^0.3.62",
     "@opentelemetry/api": "^1.9.0",
