--- a/package.json
+++ b/package.json
@@ -64,7 +64,9 @@
     "react": "^18.3.1",
     "react-day-picker": "^9.7.0",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
     "recharts": "^3.0.2",
     "tailwind-merge": "^3.0.1",
     "zod-to-json-schema": "^3.24.6"
@@ -79,6 +81,7 @@
     "@types/node-fetch": "^2.6.12",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-google-recaptcha": "^2.1.9",
     "@types/recharts": "^1.8.29",
     "@typescript-eslint/eslint-plugin": "^8.35.0",
     "@typescript-eslint/parser": "^8.35.0",
