--- a/firebase.json
+++ b/firebase.json
@@ -41,14 +41,11 @@
   },
   "hosting": {
     "source": ".",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
+    "public": "public",
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "frameworksBackend": {
       "region": "australia-southeast2",
-      "secrets": ["GEMINI_API_KEY", "GOOGLE_API_KEY"]
+      "secrets": ["GEMINI_API_KEY", "GOOGLE_API_KEY", "OPENAI_API_KEY","NEXT_PUBLIC_RECAPTCHA_SITE_KEY","RECAPTCHA_SECRET_KEY"]
     }
   }
 }
