--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -21,6 +21,12 @@ jobs:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           NEXT_PUBLIC_RECAPTCHA_SITE_KEY: ${{ secrets.NEXT_PUBLIC_RECAPTCHA_SITE_KEY }}
           RECAPTCHA_SECRET_KEY: ${{ secrets.RECAPTCHA_SECRET_KEY }}
+          NEXT_PUBLIC_FIREBASE_API_KEY: ${{ secrets.NEXT_PUBLIC_FIREBASE_API_KEY }}
+          NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN: ${{ secrets.NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN }}
+          NEXT_PUBLIC_FIREBASE_PROJECT_ID: ${{ secrets.NEXT_PUBLIC_FIREBASE_PROJECT_ID }}
+          NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET: ${{ secrets.NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET }}
+          NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID }}
+          NEXT_PUBLIC_FIREBASE_APP_ID: ${{ secrets.NEXT_PUBLIC_FIREBASE_APP_ID }}
 
       # This is the new, critical step.
       # It creates the .env file inside the functions directory that Firebase needs for deployment.
@@ -31,6 +37,16 @@ jobs:
           echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" >> functions/.env.rankpilot-h3jpc
           echo "NEXT_PUBLIC_RECAPTCHA_SITE_KEY=${{ secrets.NEXT_PUBLIC_RECAPTCHA_SITE_KEY }}" >> functions/.env.rankpilot-h3jpc
           echo "RECAPTCHA_SECRET_KEY=${{ secrets.RECAPTCHA_SECRET_KEY }}" >> functions/.env.rankpilot-h3jpc
+
+      # Set Firebase function configuration
+      - name: Set Firebase functions config
+        run: |
+          firebase functions:config:set \
+            gemini.api_key="${{ secrets.GEMINI_API_KEY }}" \
+            google.api_key="${{ secrets.GOOGLE_API_KEY }}" \
+            openai.api_key="${{ secrets.OPENAI_API_KEY }}" \
+            recaptcha.secret_key="${{ secrets.RECAPTCHA_SECRET_KEY }}" \
+            --project rankpilot-h3jpc
 
       # Add this step to expose the sitekey to the Next.js frontend
       - name: Create .env.local for Next.js frontend
