--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "test:ui": "cross-env NODE_OPTIONS='--max-old-space-size=1024' playwright test --ui",
     "test:visual": "cross-env NODE_OPTIONS='--max-old-space-size=1024' playwright test --project=visual",
     "test:update-snapshots": "cross-env NODE_OPTIONS='--max-old-space-size=1024' playwright test --update-snapshots",
-    "analyze": "cross-env ANALYZE=true npm run build"
+    "analyze": "cross-env ANALYZE=true npm run build",
+    "test:performance": "cross-env NODE_OPTIONS='--max-old-space-size=1024' playwright test --config=playwright.config.base.ts --grep=\"performance|mobile|loading\"",
+    "dev-no-turbopack": "cross-env NODE_OPTIONS='--max-old-space-size=2048' next dev"
   },
   "dependencies": {
     "@genkit-ai/firebase": "^1.14.0",
