Add git status --ignored check to workflow for gitignore verification

--- a/.github/workflows/deploy-performance-branch.yml
+++ b/.github/workflows/deploy-performance-branch.yml
@@ -25,6 +25,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Show git status with ignored files
+        run: |
+          echo "## 📋 Git Status with Ignored Files" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "### Current repository status:" >> $GITHUB_STEP_SUMMARY
+          echo '```' >> $GITHUB_STEP_SUMMARY
+          git status --ignored >> $GITHUB_STEP_SUMMARY
+          echo '```' >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "### Gitignore verification complete ✅" >> $GITHUB_STEP_SUMMARY
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
