--- a/functions/.gitignore
+++ b/functions/.gitignore
@@ -1,10 +1,56 @@
-# Compiled JavaScript files
+# ================================
+# Firebase Functions - .gitignore
+# ================================
+
+# TypeScript Compilation Output
+# -----------------------------
+lib/
 lib/**/*.js
 lib/**/*.js.map
+lib/**/*.d.ts
+*.tsbuildinfo
 
-# TypeScript v1 declaration files
+# Node.js Dependencies
+# --------------------
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# TypeScript Legacy
+# -----------------
 typings/
 
-# Node.js dependency directory
-node_modules/
+# Environment & Config
+# --------------------
+.env
+.env.*
 *.local
+.runtimeconfig.json
+
+# Firebase Specific
+# -----------------
+firebase-debug.log
+firestore-debug.log
+ui-debug.log
+
+# Testing & Debug
+# ---------------
+coverage/
+*.log
+debug-*.json
+trace-*.json
+
+# AI & Cache
+# ----------
+.ai-cache/
+.openai-cache/
+model-cache/
+
+# Temporary Files
+# --------------
+.tmp/
+.temp/
+*.tmp
+*.temp
