--- a/firebase.json
+++ b/firebase.json
@@ -8,11 +8,14 @@
   "functions": {
     "source": "functions",
     "codebase": "default",
+    "runtime": "nodejs20",
+    "region": "australia-southeast2",
     "ignore": [
       "node_modules",
       ".git",
       "firebase-debug.log",
-      "firebase-debug.*.log"
+      "firebase-debug.*.log",
+      "*.local"
     ],
     "predeploy": [
       "npm --prefix \"$RESOURCE_DIR\" run lint",
@@ -20,12 +23,22 @@
     ]
   },
   "hosting": {
-    "public": "public",
+    "source": ".",
     "ignore": [
-      "firebase.json",
-      "**/.*",
+      "firebase.json", 
+      "**/.*", 
       "**/node_modules/**"
     ],
+    "frameworksBackend": {
+      "region": "australia-southeast2",
+      "secrets": [
+        "GEMINI_API_KEY", 
+        "GOOGLE_API_KEY", 
+        "OPENAI_API_KEY",
+        "NEXT_PUBLIC_RECAPTCHA_SITE_KEY",
+        "RECAPTCHA_SECRET_KEY"
+      ]
+    },
     "headers": [
       {
         "source": "**",
@@ -69,6 +82,10 @@
     ]
   },
   "emulators": {
+    "apphosting": {
+      "port": 9002,
+      "rootDirectory": ""
+    },
     "auth": {
       "port": 9099
     },
@@ -82,47 +99,9 @@
       "port": 5000
     },
     "ui": {
-      "enabled": true
-    }
-  }
-}
-    "runtime": "nodejs20",
-    "region": "australia-southeast2",
-    "ignore": [
-      "node_modules",
-      ".git",
-      "firebase-debug.log",
-      "firebase-debug.*.log",
-      "*.local"
-    ],
-    "predeploy": [
-      "npm --prefix functions run lint --fix",
-      "npm --prefix functions run build "
-    ]
-  },
-  "emulators": {
-    "apphosting": {
-      "port": 9002,
-      "rootDirectory": ""
-    },
-    "functions": {
-      "port": 9050
-    },
-    "firestore": {
-      "port": 9010
-    },
-    "ui": {
       "enabled": true,
       "port": 9000
     },
     "singleProjectMode": true
-  },
-  "hosting": {
-    "source": ".",
-    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
-    "frameworksBackend": {
-      "region": "australia-southeast2",
-      "secrets": ["GEMINI_API_KEY", "GOOGLE_API_KEY", "OPENAI_API_KEY","NEXT_PUBLIC_RECAPTCHA_SITE_KEY","RECAPTCHA_SECRET_KEY"]
-    }
   }
 }
