--- a/firebase.json
+++ b/firebase.json
@@ -17,7 +17,6 @@
       "*.local"
     ],
     "predeploy": [
-      "npm --prefix \"$RESOURCE_DIR\" run lint",
       "npm --prefix \"$RESOURCE_DIR\" run build"
     ]
   },
@@ -35,7 +34,9 @@
         "GOOGLE_API_KEY", 
         "OPENAI_API_KEY",
         "NEXT_PUBLIC_RECAPTCHA_SITE_KEY",
-        "RECAPTCHA_SECRET_KEY"
+        "RECAPTCHA_SECRET_KEY",
+        "STRIPE_SECRET_KEY",
+        "STRIPE_WEBHOOK_SECRET"
       ]
     },
     "headers": [
@@ -44,7 +45,7 @@
         "headers": [
           {
             "key": "Content-Security-Policy",
-            "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://apis.google.com https://*.firebaseapp.com https://*.firebase.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https://*.firebaseapp.com https://*.firebase.com https://api.openai.com https://identitytoolkit.googleapis.com https://securetoken.googleapis.com https://*.googleapis.com;"
+            "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://apis.google.com https://*.firebaseapp.com https://*.firebase.com https://js.stripe.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https://*.firebaseapp.com https://*.firebase.com https://api.openai.com https://identitytoolkit.googleapis.com https://securetoken.googleapis.com https://*.googleapis.com https://api.stripe.com;"
           },
           {
             "key": "X-Content-Type-Options",
