--- a/functions/package.json
+++ b/functions/package.json
@@ -28,6 +28,7 @@
     "genkit": "^1.13.0",
     "glob": "^10.4.5",
     "openai": "^5.8.3",
+    "stripe": "^18.3.0",
     "tailwindcss": "^4.1.11",
     "zod": "^3.25.76",
     "zod-to-json-schema": "^3.24.6"
@@ -37,11 +38,11 @@
     "@types/node-fetch": "^2.6.12",
     "@typescript-eslint/eslint-plugin": "^8.35.0",
     "@typescript-eslint/parser": "^8.35.0",
+    "cross-env": "^7.0.3",
     "eslint": "^9.29.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.32.0",
-    "typescript": "^5.5.4",
-    "cross-env": "^7.0.3"
+    "typescript": "^5.5.4"
   },
   "private": true
 }
