--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@opentelemetry/auto-instrumentations-node": "^0.52.0",
     "@opentelemetry/resources": "^2.0.1",
     "@opentelemetry/sdk-node": "^0.203.0",
+    "@paypal/react-paypal-js": "^8.8.3",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.0",
@@ -59,6 +60,11 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@stripe/stripe-js": "^7.5.0",
+    "@types/canvas-confetti": "^1.9.0",
+    "@types/nodemailer": "^6.4.17",
+    "@types/stripe": "^8.0.416",
+    "canvas-confetti": "^1.9.3",
     "cheerio": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -69,16 +75,22 @@
     "firebase-functions": "^6.3.2",
     "framer-motion": "^12.18.1",
     "genkit": "^1.13.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.523.0",
     "next": "^15.3.4",
     "next-auth": "^4.24.11",
+    "nodemailer": "^6.10.1",
     "react": "^18.3.1",
     "react-day-picker": "^9.7.0",
     "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
+    "react-pdf": "^10.0.1",
     "recharts": "^3.0.2",
+    "sonner": "^2.0.6",
+    "stripe": "^18.3.0",
     "tailwind-merge": "^3.0.1",
     "zod-to-json-schema": "^3.24.6"
   },
