--- a/firebase.json
+++ b/firebase.json
@@ -45,7 +45,7 @@
         "headers": [
           {
             "key": "Content-Security-Policy",
-            "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://apis.google.com https://*.firebaseapp.com https://*.firebase.com https://js.stripe.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https://*.firebaseapp.com https://*.firebase.com https://api.openai.com https://identitytoolkit.googleapis.com https://securetoken.googleapis.com https://*.googleapis.com https://api.stripe.com;"
+            "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://apis.google.com https://*.firebaseapp.com https://*.firebase.com https://js.stripe.com https://*.paypal.com https://www.paypal.com https://www.google.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https://*.firebaseapp.com https://*.firebase.com https://api.openai.com https://identitytoolkit.googleapis.com https://securetoken.googleapis.com https://firebaseinstallations.googleapis.com https://firebase.googleapis.com https://firebaseremoteconfig.googleapis.com https://firebaseappcheck.googleapis.com https://content-firebaseappdistribution.googleapis.com https://*.googleapis.com https://api.stripe.com https://*.paypal.com https://www.paypal.com https://*.cloudfunctions.net http://localhost:* ws://localhost:*; frame-src 'self' https://js.stripe.com https://*.stripe.com https://*.paypal.com https://www.google.com; object-src 'none';"
           },
           {
             "key": "X-Content-Type-Options",
@@ -65,7 +65,7 @@
           },
           {
             "key": "Permissions-Policy",
-            "value": "camera=(), microphone=(), geolocation=(), payment=()"
+            "value": "payment=*, camera=(), microphone=(), geolocation=(), fullscreen=()"
           },
           {
             "key": "Strict-Transport-Security",
