feat: Implement usage quota management system
- Added UsageQuotaManager class to track and enforce usage limits for users based on their subscription plans.
- Introduced methods for checking usage limits, incrementing usage, resetting monthly quotas, and updating user plans.
- Created a new file `usage-quota.ts` to encapsulate all quota-related logic.
- Updated `stripe.ts` to include a function for retrieving user plans based on subscription tiers.
- Modified user setup scripts to reflect changes in user email and ensure proper subscription data initialization.
- Added user subscription synchronization logic in `user-subscription-sync.ts` for managing user subscriptions and billing.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "nextn",
-  "version": "0.1.0",
+  "name": "rankpilot-studio",
+  "version": "1.0.0",
   "private": true,
+  "description": "RankPilot - AI-First SEO Platform (Internal: Studio)",
   "scripts": {
     "dev": "cross-env NODE_OPTIONS='--max-old-space-size=2048' next dev",
     "dev-turbopack": "cross-env NODE_OPTIONS='--max-old-space-size=2048' next dev --turbopack",
