Add role-based testing for enterprise and free tiers
- Implement enterprise tier user tests in `enterprise-tier.spec.ts` with comprehensive feature access and performance testing.
- Create free tier user tests in `free-tier.spec.ts` focusing on feature access restrictions and performance under constraints.
- Introduce global setup and teardown scripts for role-based testing to ensure environment readiness and cleanup.
- Develop a test orchestrator utility for managing user flows and steps, enhancing test structure and readability.
- Add user management utilities for handling test user authentication and feature access verification.
- Update JSON state file to ensure proper formatting.
- Enhance test utilities with random delay functionality for more realistic interactions.

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "emfile:monitor:autofix": "powershell -ExecutionPolicy Bypass -File scripts/fix-emfile-error.ps1 -Mode monitor -AutoFix",
     "emfile:preventive": "powershell -ExecutionPolicy Bypass -File scripts/fix-emfile-error.ps1 -Mode preventive",
     "db:create-auth": "npx ts-node scripts/create-auth-users.ts",
+    "db:create-test-users": "node scripts/create-test-users.js",
     "db:populate": "npx ts-node scripts/populate-dummy-data.ts",
     "db:verify": "npx ts-node scripts/verify-dummy-data.ts",
     "db:test-all": "npx ts-node scripts/test-all-use-cases.ts",
@@ -71,6 +72,16 @@
     "test:headed:prod": "cross-env NODE_OPTIONS='--max-old-space-size=2048' TEST_BASE_URL=https://rankpilot-h3jpc.web.app playwright test --config=testing/configs/playwright.config.optimized.ts --headed",
     "test:ui": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/playwright.config.optimized.ts --ui",
     "test:update-snapshots": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/playwright.config.optimized.ts --update-snapshots",
+    "test:role-based": "node scripts/run-role-based-tests.js",
+    "test:role-based:optimized": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.roles.ts --project=role-based-optimized",
+    "test:role-based:comprehensive": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.roles.ts --project=role-based-comprehensive",
+    "test:role-based:all": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.roles.ts",
+    "test:role-based:cross-browser": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.roles.ts --project=role-firefox --project=role-webkit",
+    "test:role-based:mobile": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.roles.ts --project=role-mobile-chrome --project=role-mobile-safari",
+    "test:role-based:free": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.role-based.ts --project=free-tier-worker",
+    "test:role-based:enterprise": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.role-based.ts --project=enterprise-tier-worker",
+    "test:role-based:compatibility": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.role-based.ts --project=firefox-compatibility",
+    "test:role-based:windows": "powershell -ExecutionPolicy Bypass -File scripts/run-role-based-tests.ps1",
     "analyze": "cross-env ANALYZE=true npm run build"
   },
   "dependencies": {
