--- a/package.json
+++ b/package.json
@@ -151,6 +151,7 @@
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
+    "react-is": "^19.1.0",
     "react-pdf": "^10.0.1",
     "recharts": "^3.0.2",
     "sonner": "^2.0.6",
