--- a/temp-successful-workflow.yml
+++ b/temp-successful-workflow.yml
@@ -1,8 +1,6 @@
----
-# Performance Branch Testing Deployment Workflow
+﻿# Performance Branch Testing Deployment Workflow
 # This workflow deploys the performance-optimization-mobile-enhancement branch
 # to a dedicated Firebase channel for testing purposes
-# Enhanced with research-based best practices and error handling
 
 name: Deploy Performance Branch for Testing
 
@@ -18,12 +16,6 @@ on:
         default: false
         type: boolean
 
-# Environment settings for performance testing
-env:
-  NODE_VERSION: "20"
-  FIREBASE_PROJECT_ID: "rankpilot-h3jpc"
-  FIREBASE_TOOLS_VERSION: "13.31.2"  # Pinned version for stability
-
 jobs:
   test_build:
     runs-on: ubuntu-latest
@@ -35,23 +27,23 @@ jobs:
 
       - name: Show git status with ignored files
         run: |
-          echo "## 📋 Git Status with Ignored Files" >> $GITHUB_STEP_SUMMARY
+          echo "## ­ƒôï Git Status with Ignored Files" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "### Current repository status:" >> $GITHUB_STEP_SUMMARY
           echo '```' >> $GITHUB_STEP_SUMMARY
           git status --ignored >> $GITHUB_STEP_SUMMARY
           echo '```' >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "### Gitignore verification complete ✅" >> $GITHUB_STEP_SUMMARY
+          echo "### Gitignore verification complete Ô£à" >> $GITHUB_STEP_SUMMARY
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version: "20"
           cache: "npm"
 
       - name: Install dependencies
-        run: npm ci --prefer-offline --no-audit
+        run: npm ci
 
       - name: Run type checking
         run: npm run typecheck
@@ -92,17 +84,15 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version: "20"
           cache: "npm"
 
       - name: Install dependencies
-        run: npm ci --prefer-offline --no-audit
+        run: npm ci
 
       - name: Build application
         run: npm run build
         env:
-          NODE_OPTIONS: "--max-old-space-size=8192"
-          ESLINT_NO_DEV_ERRORS: "true"
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
           GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
@@ -137,14 +127,14 @@ jobs:
       - name: Deploy Functions (if requested)
         if: github.event.inputs.deploy_functions == 'true'
         run: |
-          npm install -g firebase-tools@${{ env.FIREBASE_TOOLS_VERSION }}
+          npm install -g firebase-tools
           firebase functions:config:set \
             gemini.api_key="${{ secrets.GEMINI_API_KEY }}" \
             google.api_key="${{ secrets.GOOGLE_API_KEY }}" \
             openai.api_key="${{ secrets.OPENAI_API_KEY }}" \
             recaptcha.secret_key="${{ secrets.RECAPTCHA_SECRET_KEY }}" \
-            --project ${{ env.FIREBASE_PROJECT_ID }}
-          firebase deploy --only functions --project ${{ env.FIREBASE_PROJECT_ID }}
+            --project rankpilot-h3jpc
+          firebase deploy --only functions --project rankpilot-h3jpc
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_RANKPILOT_H3JPC }}
 
@@ -160,19 +150,17 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version: "20"
           cache: "npm"
 
       - name: Install dependencies
-        run: npm ci --prefer-offline --no-audit
+        run: npm ci
 
       - name: Install Playwright browsers
         run: npx playwright install --with-deps chromium
 
       - name: Run performance-focused E2E tests
         run: npx playwright test --config=playwright.config.base.ts --grep="performance|mobile|loading"
-        env:
-          TEST_BASE_URL: "https://rankpilot-h3jpc--performance-testing-mw0cwov5.web.app"
         continue-on-error: true
 
       - name: Upload test results
@@ -197,19 +185,17 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version: "20"
           cache: "npm"
 
       - name: Install dependencies
-        run: npm ci --prefer-offline --no-audit
+        run: npm ci
 
       - name: Install Playwright browsers
         run: npx playwright install --with-deps chromium
 
       - name: Run mobile-specific tests
         run: npx playwright test --config=playwright.config.base.ts --grep="mobile"
-        env:
-          TEST_BASE_URL: "https://rankpilot-h3jpc--performance-testing-mw0cwov5.web.app"
         continue-on-error: true
 
       - name: Upload mobile test results
@@ -232,22 +218,22 @@ jobs:
     steps:
       - name: Create deployment summary
         run: |
-          echo "## 🚀 Performance Branch Deployment Summary" >> $GITHUB_STEP_SUMMARY
+          echo "## ­ƒÜÇ Performance Branch Deployment Summary" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "**Branch:** feature/performance-optimization-mobile-enhancement" >> $GITHUB_STEP_SUMMARY
           echo "**Commit:** ${{ github.sha }}" >> $GITHUB_STEP_SUMMARY
           echo "**Time:** $(date)" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "### 📊 Test Results:" >> $GITHUB_STEP_SUMMARY
+          echo "### ­ƒôè Test Results:" >> $GITHUB_STEP_SUMMARY
           echo "- **Build:** ${{ needs.test_build.result }}" >> $GITHUB_STEP_SUMMARY
           echo "- **Deploy:** ${{ needs.deploy_preview.result }}" >> $GITHUB_STEP_SUMMARY
           echo "- **Performance Tests:** ${{ needs.performance_tests.result }}" >> $GITHUB_STEP_SUMMARY
           echo "- **Mobile Tests:** ${{ needs.mobile_tests.result }}" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "### 🔗 Preview URL:" >> $GITHUB_STEP_SUMMARY
+          echo "### ­ƒöù Preview URL:" >> $GITHUB_STEP_SUMMARY
           echo "Your performance-optimized build is available at the Firebase preview channel." >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "### 📈 Performance Monitoring:" >> $GITHUB_STEP_SUMMARY
+          echo "### ­ƒôê Performance Monitoring:" >> $GITHUB_STEP_SUMMARY
           echo "- Check the performance dashboard in your deployed app" >> $GITHUB_STEP_SUMMARY
           echo "- Monitor loading times and mobile responsiveness" >> $GITHUB_STEP_SUMMARY
           echo "- Test the user feedback system" >> $GITHUB_STEP_SUMMARY
