Refactor performance tests and enhance public pages validation
- Updated performance.spec.ts to include dashboard in performance indicators and relaxed checks for development.
- Deleted metrics.spec.ts as it was redundant.
- Added public-pages-e2e.spec.ts for comprehensive testing of public pages including homepage, pricing, features, and FAQ sections.
- Removed outdated public-pages.spec.ts and replaced it with more focused tests.
- Created visual-regression.spec.ts for visual regression testing.
- Deleted obsolete visual tests including cross-browser, dashboard, and visual flow tests.
- Updated enhanced-auth.ts with new test user credentials for better test coverage.

--- a/package.json
+++ b/package.json
@@ -58,36 +58,20 @@
     "db:get-users": "npx ts-node scripts/get-all-users.ts",
     "db:setup": "npm run db:populate && npm run db:verify && npm run db:test-all",
     "precommit": "npm run lint:fix && npm run typecheck && npm run optimize",
-    "test": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/playwright.config.optimized.ts",
-    "test:unit": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/playwright.config.optimized.ts --project=unit",
-    "test:integration": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/playwright.config.optimized.ts --project=integration",
-    "test:e2e": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/playwright.config.optimized.ts --project=e2e",
-    "test:mobile": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/playwright.config.optimized.ts --project=mobile",
-    "test:visual": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/playwright.config.optimized.ts --project=visual",
-    "test:performance": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/playwright.config.optimized.ts --project=performance",
-    "test:accessibility": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/playwright.config.optimized.ts --project=accessibility",
-    "test:fast": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/playwright.config.optimized.ts --project=unit --project=integration",
-    "test:critical": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/playwright.config.optimized.ts testing/specs/main/auth-consolidated.spec.ts testing/specs/main/basic.spec.ts testing/specs/main/dev-ready.spec.ts",
-    "test:graceful": "cross-env NODE_OPTIONS='--max-old-space-size=1024' playwright test --config=testing/configs/playwright.config.graceful.ts --workers=1 --timeout=90000",
-    "test:stable": "cross-env NODE_OPTIONS='--max-old-space-size=1024' playwright test --config=testing/configs/playwright.config.graceful.ts testing/specs/main/basic.spec.ts --workers=1",
-    "test:manager": "powershell -ExecutionPolicy Bypass -File ./scripts/test-manager.ps1",
-    "test:local": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/playwright.config.local.ts",
-    "test:local:basic": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/playwright.config.simple.ts",
-    "test:local:simple": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/playwright.config.simple.ts testing/specs/main/dev-ready.spec.ts",
-    "test:local:debug": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/playwright.config.simple.ts --headed --debug",
-    "test:prod": "cross-env NODE_OPTIONS='--max-old-space-size=2048' TEST_BASE_URL=https://rankpilot-h3jpc.web.app playwright test --config=testing/configs/playwright.config.optimized.ts",
-    "test:headed": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/playwright.config.optimized.ts --headed",
-    "test:headed:local": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/playwright.config.local.ts --headed",
-    "test:headed:prod": "cross-env NODE_OPTIONS='--max-old-space-size=2048' TEST_BASE_URL=https://rankpilot-h3jpc.web.app playwright test --config=testing/configs/playwright.config.optimized.ts --headed",
-    "test:ui": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/playwright.config.optimized.ts --ui",
-    "test:update-snapshots": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/playwright.config.optimized.ts --update-snapshots",
-    "test:role-based": "node scripts/run-role-based-tests.js",
-    "test:role-based:optimized": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.roles.ts --project=role-based-optimized",
-    "test:role-based:comprehensive": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.roles.ts --project=role-based-comprehensive",
-    "test:role-based:all": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.roles.ts",
-    "test:role-based:cross-browser": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.roles.ts --project=role-firefox --project=role-webkit",
-    "test:role-based:mobile": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.roles.ts --project=role-mobile-chrome --project=role-mobile-safari",
-    "test:role-based:free": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.role-based.ts --project=free-tier-worker",
+    "test": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/test.config.ts",
+    "test:auth": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/test.config.ts testing/specs/main/auth-consolidated.spec.ts",
+    "test:mobile": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/test.config.ts testing/specs/main/mobile-nav-consolidated.spec.ts",
+    "test:visual": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/test.config.ts testing/specs/main/visual-regression.spec.ts",
+    "test:api": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/test.config.ts testing/specs/main/api-contracts.spec.ts",
+    "test:accessibility": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/test.config.ts testing/specs/main/accessibility.spec.ts",
+    "test:performance": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/test.config.ts testing/specs/main/performance.spec.ts",
+    "test:features": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/test.config.ts testing/specs/main/features/",
+    "test:e2e": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/test.config.ts testing/specs/main/public-pages-e2e.spec.ts",
+    "test:critical": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/test.config.ts testing/specs/main/auth-consolidated.spec.ts testing/specs/main/performance.spec.ts testing/specs/main/accessibility.spec.ts",
+    "test:headed": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/test.config.ts --headed",
+    "test:ui": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/test.config.ts --ui",
+    "test:prod": "cross-env NODE_OPTIONS='--max-old-space-size=2048' TEST_BASE_URL=https://rankpilot-h3jpc.web.app playwright test --config=testing/configs/test.config.ts",
+    "test:update-snapshots": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/test.config.ts --update-snapshots",
     "test:role-based:enterprise": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.role-based.ts --project=enterprise-tier-worker",
     "test:role-based:compatibility": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.role-based.ts --project=firefox-compatibility",
     "test:role-based:windows": "powershell -ExecutionPolicy Bypass -File scripts/run-role-based-tests.ps1",
